syntax = "proto3";

package node;

option go_package = "./node/proto;proto";

service NodeBase {
  rpc UserMessage(stream UserMessageWraper) returns (stream UserMessageWraper) {}
}

message UserMessageWraper {
  int64 user_id = 1;
  string msg_name = 2;
  map<string, string> meta = 3;
  bytes body = 4;
}

message EventMessageWraper {
  string topic = 1;
  bytes body = 2;
  string create_by = 3;
  string create_at = 4; // todo: moditfy to timestamp
}
